<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background"
    >


    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="160dp"
        android:hint="@string/Username"
        android:background="@color/white"
        android:drawableLeft="@drawable/user"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:hint="@string/Password"
        android:drawableLeft="@drawable/password"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/Login"
        android:drawableLeft="@drawable/login"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>
    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/not_register"
        android:textColor="@color/colorAccent"
        android:background="@color/indico"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/registerNow"

        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/Register"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:background="@color/colorAccent"
        android:textStyle="bold" />

</LinearLayout>


