<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background"
    >


    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="160dp"
        android:hint="@string/Username"
        android:background="@color/white"
        android:drawableLeft="@drawable/user"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:hint="@string/Password"
        android:drawableLeft="@drawable/password"
        />
    <EditText
        android:id="@+id/conf_password"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:hint="@string/ConfirmPassword"
        android:drawableLeft="@drawable/password"
        />
    <Button

        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:text="@string/Register"
        android:textSize="20dp"
        android:drawableLeft="@drawable/login"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"></LinearLayout>
    <TextView
        android:id="@+id/alreadyRegistered"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/allredy_registerd"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:background="@color/colorAccent"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textStyle="bold"
        android:text="Go to login page"
        android:textColor="@color/colorAccent"
        android:background="@color/indico"
        android:layout_marginTop="20dp"/>






</LinearLayout>